----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-29 Garvin Hicking <pma@supergarv.de>
    * db_details_structure.php: Bug #942362 - Colspan off by one
    * left.php: Modified js function to fit typecasting of Safari

2004-04-29 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/create-release.sh: keep only one previous version in cvs-prev
    * lang/estonian: Updated, thanks to Alvar Soome (finsoft).
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac).
    * lang/swedish: Updated, thanks to Björn T. Hallberg (bth).
    * lang/slovenian update, thanks to Kositer Uros

2004-04-29 Michal Cihar  <michal@cihar.com>
    * libraries/display_tbl.lib.php, libraries/sqlparser.lib.php,
      libraries/string.lib.php, libraries/dbi/mysql.dbi.lib.php: SQL parser
      now correctly works with multibyte strings (bug #936161).
    * libraries/dbi/mysql.dbi.lib.php: Do not break TEXT fields (bug #860160).
    * libraries/display_tbl.lib.php: Show if BLOB is null (RFE #941528).
    * tbl_properties_structure.php: Forgotten </nobr> -> </div>.
    * libraries/display_tbl.lib.php: Fixed class="nobr" -> class="nowrap".

2004-04-28 Michal Cihar  <michal@cihar.com>
    * css/phpmyadmin.css.php: Force <button> to be displayed inline.
    * libraries/common.lib.php: When only_db matches no database, do not show
      any (bug #943626).
    * css/phpmyadmin.css.php: Not .nowrap, but div.nowrap should have zero
      margin/padding.
    * server_privileges.php: No ugly message when editing privileges for
      non-existant database (bug #942357).

2004-04-28 Garvin Hicking <pma@supergarv.de>
    * left.php, main.php, server_databases.php, common.lib.php,
      db_details_common.php: Bug #942296 - Safari can't handle
      location.replace() redirects correctly
    * libraries/tbl_change.js: Restrict calendar to maximum values for